syntax = "proto3";
package devkit.v1;

import "buf/validate/validate.proto";
import "devkit/v1/client.proto";
import "devkit/v1/tenant_partial.proto";
import "google/protobuf/timestamp.proto";

// message yourmessage {
// }
// INJECT MESSAGES

message TenantsSchemaSection {
  int32 section_id = 1;
  string section_name = 2;
  string section_name_ar = 3;
  string section_header = 4;
  string section_header_ar = 5;
  string section_description = 6;
  string section_description_ar = 7;
  string section_button_label = 8;
  string section_button_label_ar = 9;
  int32 section_button_page_id = 10;
  string section_images = 11;
  repeated string section_images_array = 21;
  int32 tenant_id = 12;
  string section_background = 13;
  string section_icon = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
  google.protobuf.Timestamp deleted_at = 17;
}
message TenantsSchemaSectionView {
  int32 section_id = 1;
  string section_name = 2;
  string section_name_ar = 3;
  string section_header = 4;
  string section_header_ar = 5;
  string section_description = 6;
  string section_description_ar = 7;
  string section_button_label = 8;
  string section_button_label_ar = 9;
  int32 section_button_page_id = 10;
  repeated string section_images_array = 21;
  string section_images = 11;
  int32 tenant_id = 12;
  string section_background = 13;
  string section_icon = 14;
  repeated TenantsSchemaPartial partials = 18;
}
message SectionListRequest {}

message SectionListResponse {
  repeated TenantsSchemaSection records = 1;
  repeated TenantsSchemaSection deleted_records = 2;
  AvailableOptions options = 3;
}

message SectionCreateUpdateRequest {
  int32 section_id = 1;
  string section_name = 2 [
    (buf.validate.field).string.min_len = 2,
    (buf.validate.field).string.max_len = 200
  ];
  string section_name_ar = 3 [(buf.validate.field).string.max_len = 200];
  string section_button_label = 4 [(buf.validate.field).string.max_len = 200];
  string section_button_label_ar = 5 [(buf.validate.field).string.max_len = 200];
  int32 section_button_page_id = 6;
  string section_header = 7;
  string section_header_ar = 8;
  string section_description = 9;
  string section_description_ar = 10;
  repeated string section_images = 11;
  int32 tenant_id = 12;
  string section_background = 13 [(buf.validate.field).string.max_len = 500];
  string section_icon = 14 [(buf.validate.field).string.max_len = 500];
}

message SectionCreateUpdateResponse {
  TenantsSchemaSection record = 1;
}

message SectionDeleteRestoreRequest {
  repeated int32 records = 1 [(buf.validate.field).repeated = {
    unique: true
    max_items: 500
  }];
}

message SectionDeleteRestoreResponse {
  repeated TenantsSchemaSection records = 1;
}

message SectionFindForUpdateRequest {
  int32 record_id = 1;
}
message SectionFindForUpdateResponse {
  SectionCreateUpdateRequest request = 1;
}

message SectionListInptRequest {}

message SectionListInptResponse {
  repeated SelectInputOption options = 1;
}
